Fix issue scrollbar issue on course content

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -278,7 +278,7 @@
 
   .card {
     color: white;
-
+    overflow:auto;
     a {
       color: white;
       @include hover-focus {
